[workspace]
members = [
  "support-api",
  "support-cli",
  "support-model",
  "support-sdk",
  "xtask"
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive", "string"] }
clap_complete = "4.5"
config = { version = "0.15", features = ["toml"] }
ctrlc = "3.5"
derive_builder = "0.20.2"
dirs = "6.0.0"
dropshot = "0.17"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = "1.9.0"
newline-converter = "0.3.0"
newtype-uuid = { version = "1.3.2", features = ["schemars08", "v4", "serde"] }
oauth2 = { version = "5.0.0", default-features = false }
oauth2-reqwest = "0.1.0-alpha.3"
owo-colors = "4.2.3"
progenitor = "0.14"
progenitor-client = "0.14"
regex = "1.12.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "rustls"] }
rustfmt-wrapper = "0.2.1"
rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
schemars = { version = "0.8.21", features = ["chrono"] }
secrecy = "0.10.3"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
similar = "2.7.0"
slog = "2.8.2"
slog-async = "2.8.0"
tabwriter = "1.4.1"
tap = "1.0.1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.9.12"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-slog = { git = "https://github.com/oxidecomputer/tracing-slog", default-features = false }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["serde"] }
v-api = { git = "https://github.com/oxidecomputer/v-api", default-features = false, branch = "oauth-rework" }
v-api-installer = { git = "https://github.com/oxidecomputer/v-api", default-features = false, branch = "oauth-rework" }
v-api-param = { git = "https://github.com/oxidecomputer/v-api", default-features = false, branch = "oauth-rework" }
v-api-permission-derive = { git = "https://github.com/oxidecomputer/v-api", default-features = false, branch = "oauth-rework" }
v-cli-sdk = { git = "https://github.com/oxidecomputer/v-api", default-features = false, branch = "oauth-rework" }
v-model = { git = "https://github.com/oxidecomputer/v-api", default-features = false, branch = "oauth-rework" }
