[package]
name = "support-cli"
version = "0.9.7"
edition = "2021"
license = "MPL-2.0"
homepage = "https://github.com/oxidecomputer/support"
repository = "https://github.com/oxidecomputer/support"
description = "Oxide Hiring CLI"

[package.metadata.dist]
dist = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
oauth2 = { workspace = true }
oauth2-reqwest = { workspace = true }
owo-colors = { workspace = true }
progenitor-client = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
support-sdk = { path = "../support-sdk" }
tabwriter = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
v-cli-sdk = { workspace = true }
